Add cartoon style: cartoon cat images, emoji animations, colorful gradients, and playful design elements

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo"><img src="assets/images/lassie-cat.jpg" alt="LassieCat" class="nav-logo"> LassieCat</div>
+        <div class="logo"><span class="cartoon-emoji">🐱</span> LassieCat</div>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#tokenomics">Tokenomics</a></li>
@@ -517,7 +517,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <div class="logo"><img src="assets/images/lassie-cat.jpg" alt="LassieCat" class="footer-logo"> LassieCat</div>
+                    <div class="logo"><span class="cartoon-emoji">🐱</span> LassieCat</div>
                     <p>The community cryptocurrency for cat lovers everywhere.</p>
                     <div class="social-links">
                         <a href="https://t.me/lassiecat">✈️</a>
