Remove Telegram links (will add later when available)

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
             <p class="section-subtitle">Become part of the LassieCat family</p>
             
             <div class="community-grid">
-                <a href="https://t.me/lassiecat" class="community-card telegram">
+                [<!-- Telegram removed -->
                     <div class="community-icon">✈️</div>
                     <h3>Telegram</h3>
                     <p>Join the discussion</p>
@@ -520,7 +520,7 @@
                     <div class="logo"><span class="cartoon-emoji">🐱</span> LassieCat</div>
                     <p>The community cryptocurrency for cat lovers everywhere.</p>
                     <div class="social-links">
-                        <a href="https://t.me/lassiecat">✈️</a>
+                        
                         <a href="#">𝕏</a>
                         <a href="#">💬</a>
                         <a href="https://github.com/lassiecat/website">🐙</a>
@@ -550,7 +550,7 @@
                 <div class="footer-links">
                     <h4>Community</h4>
                     <ul>
-                        <li><a href="https://t.me/lassiecat">Telegram</a></li>
+                        <li></li>
                         <li><a href="#">Twitter</a></li>
                         <li><a href="#">Discord</a></li>
                         <li><a href="#">GitHub</a></li>
