Add SVG cartoon cat logo and fix NEOXA

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo"><div class="logo-cat">🐱</div>LASSIECAT</div>
+        <div class="logo"><img src="assets/cat.svg" class="logo-cat" alt="LassieCat Logo">LASSIECAT</div>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#coinomics">Coinomics</a></li>
@@ -184,7 +184,7 @@
         <div class="floating" style="bottom: 25%; left: 18%; animation-delay: 2s;">▦</div>
         <div class="floating" style="bottom: 35%; right: 10%; animation-delay: 3s;">◆</div>
         
-        <div class="hero-cat"></div>
+        <img src="assets/cat.svg" class="hero-cat" alt="LassieCat Mascot">
         <h1>LASSIE<span>CAT</span></h1>
         <h2>LASY COIN</h2>
         <p>KawPoW GPU mining with masternode rewards. Fair launch. Fixed supply. Built to last.</p>
@@ -351,7 +351,7 @@
                     <ul>
                         <li>Project concept and branding</li>
                         <li>Website launch</li>
-                        <li>NEOXA fork and branding</li>
+                        <li>NEOXA fork and rebranding</li>
                     </ul>
                 </div>
             </div>
@@ -456,7 +456,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-brand">
-                <div class="logo" style="color: white;"><div class="logo-cat" style="background: rgba(255,255,255,0.1);">🐱</div>LASSIECAT</div>
+                <div class="logo" style="color: white;"><img src="assets/cat.svg" class="logo-cat" style="background: rgba(255,255,255,0.1);" alt="LassieCat">LASSIECAT</div>
                 <p>LASY Coin - KawPoW cryptocurrency with masternode rewards.</p>
             </div>
             <div class="footer-links">
