Update cat SVG art style and fix NEOXA text

--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
             </ul>
             <div class="mn-reward-box">
                 <p>Daily Rewards per MN</p>
-                <div>~360,000 LASY</div>
-                <div style="color: var(--text-muted); font-size: 0.75rem; margin-top: 4px;">(based on ~10 active MNs)</div>
+                <div>~172,800 LASY</div>
+                <div style="color: var(--text-muted); font-size: 0.75rem; margin-top: 4px;">(1440 blocks/day × 2,500 LASY ÷ ~20 MNs)</div>
             </div>
         </div>
     </section>
@@ -351,7 +351,7 @@
                     <ul>
                         <li>Project concept and branding</li>
                         <li>Website launch</li>
-                        <li>NEOXA fork and rebranding</li>
+                        <li>LASSIECAT fork and rebranding</li>
                     </ul>
                 </div>
             </div>
