Remove coin border, fix LassieCat capitalization

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     <ul>
                         <li>Project concept and branding</li>
                         <li>Website launch</li>
-                        <li>LASSIECAT fork and rebranding</li>
+                        <li>LassieCat fork and rebranding</li>
                     </ul>
                 </div>
             </div>
