Remove COIN from LASY COIN

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         
         <img src="assets/cat.svg" class="hero-cat" alt="LassieCat Mascot">
         <h1>LASSIE<span>CAT</span></h1>
-        <h2>LASY COIN</h2>
+        <h2>LASY</h2>
         <p>KawPoW GPU mining with masternode rewards. Fair launch. Fixed supply. Built to last.</p>
         <div>
             <a href="#download" class="btn btn-primary">Get Wallet</a>
