Update: Complete specs - FULLY LIVE!
- Block 324+ mined
- All binaries ready
- Mining pool configured
- Public networking enabled
- Chain ID: 2026
- Pool IP: 144.91.127.14:2026

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="LassieCat (LASY) - Ethash cryptocurrency - NOW LIVE!">
-    <title>LassieCat (LASY) - Ethash Coin - NOW LIVE!</title>
+    <title>LassieCat (LASY) - Ethash Coin - LIVE!</title>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Rajdhani:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root { --primary: #00d4ff; --accent: #00ff88; --success: #00ff88; --dark: #0d1117; --darker: #05080c; --card-bg: #161b22; --card-border: #30363d; --text: #c9d1d9; --text-muted: #8b949e; }
@@ -89,9 +89,9 @@
         .mining-card h3 { color: var(--accent); font-size: 0.95rem; margin: 12px 0 8px; text-transform: uppercase; letter-spacing: 1px; }
         .mining-card p { color: #5a656e; font-size: 0.8rem; line-height: 1.4; }
         .pool-section { background: var(--darker); border-top: 1px solid #30363d; }
-        .pool-info { background: var(--card-bg); border: 1px solid var(--card-border); border-radius: 10px; padding: 30px; max-width: 600px; margin: 0 auto; text-align: center; }
+        .pool-info { background: var(--card-bg); border: 1px solid var(--card-border); border-radius: 10px; padding: 30px; max-width: 700px; margin: 0 auto; text-align: center; }
         .pool-info h3 { color: var(--primary); margin-bottom: 20px; text-align: center; text-transform: uppercase; letter-spacing: 2px; }
-        .code-block { background: rgba(0, 0, 0, 0.3); border-radius: 8px; padding: 20px; text-align: left; margin: 15px 0; font-family: 'Courier New', monospace; font-size: 0.85rem; color: var(--accent); overflow-x: auto; }
+        .code-block { background: rgba(0, 0, 0, 0.4); border-radius: 8px; padding: 20px; text-align: left; margin: 15px 0; font-family: 'Courier New', monospace; font-size: 0.9rem; color: var(--accent); overflow-x: auto; }
         .pool-info ul { list-style: none; text-align: left; margin-top: 20px; }
         .pool-info li { padding: 10px 0; border-bottom: 1px solid #21262d; display: flex; align-items: center; gap: 10px; font-size: 0.9rem; }
         .pool-info li:last-child { border-bottom: none; }
@@ -148,8 +148,8 @@
         <img src="assets/cat.svg" class="hero-cat" alt="LassieCat Mascot">
         <h1>LASSIE<span>CAT</span></h1>
         <h2>LASY COIN</h2>
-        <div class="live-badge" style="margin-bottom: 20px;">● BLOCK 155+ MINED</div>
-        <p>Ethash cryptocurrency - NOW LIVE! GPU mining with T-Rex. Fixed supply. Fair launch.</p>
+        <div class="live-badge" style="margin-bottom: 20px;">● BLOCK 324+ MINED</div>
+        <p>Ethash cryptocurrency - LIVE! GPU mining with T-Rex. Fixed supply. Fair launch.</p>
         <div>
             <a href="#download" class="btn btn-success">Start Mining</a>
             <a href="#specs" class="btn btn-secondary">View Specs</a>
@@ -160,7 +160,7 @@
             <div class="stat-card">
                 <div class="stat-icon">◆</div>
                 <h3>Block</h3>
-                <div class="stat-value success">155+</div>
+                <div class="stat-value success">324+</div>
                 <div class="stat-label">MINED & LIVE</div>
             </div>
             <div class="stat-card">
@@ -226,7 +226,7 @@
             <div class="chain-card">
                 <div class="chain-icon">💰</div>
                 <h3>Supply</h3>
-                <p>~1,200 LASY</p>
+                <p>~4,000 LASY</p>
                 <div class="detail">Mined so far</div>
             </div>
         </div>
@@ -284,7 +284,7 @@
     </section>
     <section class="pool-section">
         <h2>MINING POOL</h2>
-        <p class="section-subtitle">Connect T-Rex miner to LassieCat</p>
+        <p class="section-subtitle">Connect miners to LassieCat network</p>
         <div class="pool-info">
             <h3>T-Rex Mining Command</h3>
             <div class="code-block">
@@ -293,8 +293,9 @@ t-rex -a ethash -o stratum+tcp://144.91.127.14:2026 -u YOUR_WALLET -p x
             <ul>
                 <li><strong>Pool IP:</strong> 144.91.127.14</li>
                 <li><strong>Port:</strong> 2026</li>
-                <li><strong>Wallet:</strong> 0xd845B83A85194c9CB4D7269aEb05500511ed0cbC</li>
+                <li><strong>Network ID:</strong> 2026</li>
                 <li><strong>Algo:</strong> ethash</li>
+                <li><strong>Fee:</strong> 0%</li>
             </ul>
         </div>
     </section>
@@ -338,7 +339,7 @@ t-rex -a ethash -o stratum+tcp://144.91.127.14:2026 -u YOUR_WALLET -p x
         <div class="footer-content">
             <div class="footer-brand">
                 <div class="logo" style="color: white;"><img src="assets/cat.svg" class="logo-cat" style="background: rgba(255,255,255,0.1);" alt="LassieCat">LASSIECAT</div>
-                <p>LASY Coin - Ethash cryptocurrency. NOW LIVE!</p>
+                <p>LASY Coin - Ethash cryptocurrency. LIVE!</p>
             </div>
             <div class="footer-links">
                 <h4>Quick Links</h4>
@@ -360,7 +361,7 @@ t-rex -a ethash -o stratum+tcp://144.91.127.14:2026 -u YOUR_WALLET -p x
         </div>
         <div class="footer-bottom">
             <p>&copy; 2026 LassieCat. All rights reserved.</p>
-            <p class="footer-note">LASY Coin - NOW LIVE! Block 155+</p>
+            <p class="footer-note">LASY Coin - LIVE! Block 324+</p>
         </div>
     </footer>
 </body>
